@@ -1,6 +1,8 @@
 * Archive.retrieve() and Archive.retrieve_by_name() now return a list of
   product paths. Archive.retrieve_by_uuid() now returns a single path.
 
+* Added Archive.delete_properties_by_uuid()
+
 5.0 2020-07-30
 ~~~~~~~~~~~~~~
 
